--- a/trunk/CS_Website/Admin/ModuleDefinitions/App_LocalResources/ModuleDefinitions.ascx.resx
+++ b/trunk/CS_Website/Admin/ModuleDefinitions/App_LocalResources/ModuleDefinitions.ascx.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AddContent.Action" xml:space="preserve">
-    <value>Add New Module</value>
+    <value>Create New Module</value>
   </data>
   <data name="ModuleName.Header" xml:space="preserve">
     <value>Module Name</value>
@@ -139,7 +139,7 @@
     <value>Install New Module</value>
   </data>
   <data name="ModuleHelp.Text" xml:space="preserve">
-    <value>&lt;h1&gt;About Modules&lt;/h1&gt;&lt;p&gt;The Super User can manage the Modules installed on the system.&lt;/p&gt;</value>
+    <value>&lt;h1&gt;About Modules&lt;/h1&gt;&lt;p&gt;The Super User can install new Modules and manage existing Modules.&lt;/p&gt;</value>
   </data>
   <data name="cmdGo" xml:space="preserve">
     <value>Go</value>
