--- a/CS_Website/Admin/Security/App_LocalResources/SendPassword.ascx.resx
+++ b/CS_Website/Admin/Security/App_LocalResources/SendPassword.ascx.resx
@@ -1,99 +1,177 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
-    <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-        <xsd:element name="root" msdata:IsDataSet="true">
+  <!-- 
+    Microsoft ResX Schema 
+    
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
             <xsd:complexType>
-                <xsd:choice maxOccurs="unbounded">
-                    <xsd:element name="data">
-                        <xsd:complexType>
-                            <xsd:sequence>
-                                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-                            </xsd:sequence>
-                            <xsd:attribute name="name" type="xsd:string" />
-                            <xsd:attribute name="type" type="xsd:string" />
-                            <xsd:attribute name="mimetype" type="xsd:string" />
-                        </xsd:complexType>
-                    </xsd:element>
-                    <xsd:element name="resheader">
-                        <xsd:complexType>
-                            <xsd:sequence>
-                                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                            </xsd:sequence>
-                            <xsd:attribute name="name" type="xsd:string" use="required" />
-                        </xsd:complexType>
-                    </xsd:element>
-                </xsd:choice>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
-        </xsd:element>
-    </xsd:schema>
-    <resheader name="ResMimeType">
-        <value>text/microsoft-resx</value>
-    </resheader>
-    <resheader name="Version">
-        <value>1.0.0.0</value>
-    </resheader>
-    <resheader name="Reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-    </resheader>
-    <resheader name="Writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-    </resheader>
-    <data name="plUsername.Text">
-        <value>User Name:</value>
-    </data>
-    <data name="plUsername.Help">
-        <value>Enter your User name here.  In most cases this will be your email address.</value>
-    </data>
-    <data name="cmdSendPassword.Text">
-        <value>Send Password</value>
-    </data>
-    <data name="EnterCode.Text">
-        <value>Enter Your Verification Code</value>
-    </data>
-    <data name="LoginFailed.Text">
-        <value>Login Failed, remember that Passwords are case sensitive</value>
-    </data>
-    <data name="UserLockedOut.Text">
-        <value>This account has been locked out after too many unsuccessful login attempts. Please wait 10 minutes before trying to login again. If you have forgotten your password, please try the Password Reminder option before contacting an Administrator.</value>
-    </data>
-    <data name="PasswordSent.Text">
-        <value>Password Has Been Sent To&lt;br&gt;Your Email Address.</value>
-    </data>
-    <data name="UsernameError.Text">
-        <value>Username Does Not Exist</value>
-    </data>
-    <data name="EnterUsername.Text">
-        <value>Please Enter Your Username</value>
-    </data>
-    <data name="ControlTitle_sendpassword.Text">
-        <value>Retrieve Password</value>
-    </data>
-    <data name="plCaptcha.Text">
-        <value>Security Code</value>
-    </data>
-    <data name="plCaptcha.Help">
-        <value>Enter the security code.</value>
-    </data>
-    <data name="CaptchaText.Text">
-        <value>Enter the code shown above in the box below</value>
-    </data>
-    <data name="InvalidCaptcha.Text">
-        <value>Incorrect Security Code</value>
-    </data>
-    <data name="plQuestion.Text">
-        <value>Password Question:</value>
-    </data>
-    <data name="plQuestion.Help">
-        <value>The password question you have provided</value>
-    </data>
-    <data name="plAnswer.Text">
-        <value>Answer</value>
-    </data>
-    <data name="plAnswer.Help">
-        <value>Enter the answer to the Pasword Question</value>
-    </data>
-    <data name="PasswordRetrievalError.Text">
-        <value>There was an error retrieving your password. No password was sent.</value>
-    </data>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
+  <resheader name="resmimetype">
+    <value>text/microsoft-resx</value>
+  </resheader>
+  <resheader name="version">
+    <value>2.0</value>
+  </resheader>
+  <resheader name="reader">
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <resheader name="writer">
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <data name="plUsername.Text" xml:space="preserve">
+    <value>User Name:</value>
+  </data>
+  <data name="plUsername.Help" xml:space="preserve">
+    <value>Enter your User name here.  In most cases this will be your email address.</value>
+  </data>
+  <data name="cmdSendPassword.Text" xml:space="preserve">
+    <value>Send Password</value>
+  </data>
+  <data name="EnterCode.Text" xml:space="preserve">
+    <value>Enter Your Verification Code</value>
+  </data>
+  <data name="LoginFailed.Text" xml:space="preserve">
+    <value>Login Failed, remember that Passwords are case sensitive</value>
+  </data>
+  <data name="UserLockedOut.Text" xml:space="preserve">
+    <value>This account has been locked out after too many unsuccessful login attempts. Please wait 10 minutes before trying to login again. If you have forgotten your password, please try the Password Reminder option before contacting an Administrator.</value>
+  </data>
+  <data name="PasswordSent.Text" xml:space="preserve">
+    <value>Password Has Been Sent To&lt;br&gt;Your Email Address.</value>
+  </data>
+  <data name="UsernameError.Text" xml:space="preserve">
+    <value>Username Does Not Exist</value>
+  </data>
+  <data name="EnterUsername.Text" xml:space="preserve">
+    <value>Please Enter Your Username</value>
+  </data>
+  <data name="ControlTitle_sendpassword.Text" xml:space="preserve">
+    <value>Retrieve Password</value>
+  </data>
+  <data name="plCaptcha.Text" xml:space="preserve">
+    <value>Security Code</value>
+  </data>
+  <data name="plCaptcha.Help" xml:space="preserve">
+    <value>Enter the security code.</value>
+  </data>
+  <data name="CaptchaText.Text" xml:space="preserve">
+    <value>Enter the code shown above in the box below</value>
+  </data>
+  <data name="InvalidCaptcha.Text" xml:space="preserve">
+    <value>Incorrect Security Code</value>
+  </data>
+  <data name="plQuestion.Text" xml:space="preserve">
+    <value>Password Question:</value>
+  </data>
+  <data name="plQuestion.Help" xml:space="preserve">
+    <value>The password question you have provided</value>
+  </data>
+  <data name="plAnswer.Text" xml:space="preserve">
+    <value>Answer</value>
+  </data>
+  <data name="plAnswer.Help" xml:space="preserve">
+    <value>Enter the answer to the Pasword Question</value>
+  </data>
+  <data name="PasswordRetrievalError.Text" xml:space="preserve">
+    <value>There was an error retrieving your password. No password was sent.</value>
+  </data>
 </root>
